@@ -1,2 +1,3 @@
 0.9.1
+   - bug [9449] "Timing on each plugin call and logging of the result"
 
